syntax = "proto3";
option go_package = "/protos";
package train_ticket_app;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  // Add other user-related RPC methods here...
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1; // User ID
}

message GetUserRequest {
  string id = 1; // User ID
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  // Add other user fields here...
}
